generated/checker-for-evaluation/generated/test-Buffer-Overflow-a97de7bff13b1cc825c1b1344eaed8d6c2d3e695/build_logs/0/build_error_log4.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:36:8: error: ‘void {anonymous}::SAGenTestChecker::checkPreCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&)’ marked ‘override’, but does not override
   36 |   void checkPreCall(const CallEvent &Call, CheckerContext &C) override;
      |        ^~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:23,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/Checker.h: In instantiation of ‘static void clang::ento::check::PreCall::_checkCall(void*, const clang::ento::CallEvent&, clang::ento::CheckerContext&) [with CHECKER = {anonymous}::SAGenTestChecker]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/Checker.h:175:22:   required from ‘static void clang::ento::check::PreCall::_register(CHECKER*, clang::ento::CheckerManager&) [with CHECKER = {anonymous}::SAGenTestChecker]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/Checker.h:526:22:   required from ‘static void clang::ento::Checker<CHECK1>::_register(CHECKER*, clang::ento::CheckerManager&) [with CHECKER = {anonymous}::SAGenTestChecker; CHECK1 = clang::ento::check::PreCall]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/CheckerManager.h:212:23:   required from ‘CHECKER* clang::ento::CheckerManager::registerChecker(AT&& ...) [with CHECKER = {anonymous}::SAGenTestChecker; AT = {}]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Frontend/CheckerRegistry.h:108:36:   required from ‘static void clang::ento::CheckerRegistry::initializeManager(MGR&) [with MGR = clang::ento::CheckerManager; T = {anonymous}::SAGenTestChecker]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Frontend/CheckerRegistry.h:132:15:   required from ‘void clang::ento::CheckerRegistry::addChecker(llvm::StringRef, llvm::StringRef, llvm::StringRef, bool) [with T = {anonymous}::SAGenTestChecker]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:83:40:   required from here
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/Checker.h:168:45: error: passing ‘const {anonymous}::SAGenTestChecker’ as ‘this’ argument discards qualifiers [-fpermissive]
  168 |     ((const CHECKER *)checker)->checkPreCall(msg, C);
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:54:6: note:   in call to ‘void {anonymous}::SAGenTestChecker::checkPreCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&)’
   54 | void SAGenTestChecker::checkPreCall(const CallEvent &Call, CheckerContext &C) {
      |      ^~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
